fixed collapse menu

--- a/css/style.scss
+++ b/css/style.scss
@@ -656,7 +656,7 @@ a, a:hover{
           .footer_info_icon{
             margin-top:0;
             .footer_left_text{
-              margin-top:0 !important;
+              margin-top:0;
             }
           }
         }
@@ -773,7 +773,7 @@ a, a:hover{
     }/*header */
     .who{
       .who_right{
-        padding-left:0 !important;
+        padding-left:0;
       }
       .btn_who{
         margin-bottom:2em;
@@ -801,7 +801,7 @@ a, a:hover{
     }/*clients*/
     .blog{
       .blog_left{
-        padding-right:0 !important;
+        padding-right:0;
         .black_rect{
           margin-bottom:2em;
         }
